--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Chiyu's Homepage"
+title                    : "Chiyu Wei (魏驰宇)"
 title_separator          : "-"
 name                     : &name "Chiyu Wei"
-description              : &description "Chiyu Wei (魏驰宇)"
+description              : &description "Chiyu's Homepage"
 url                      : https://chiyuwei.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : 
