--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/chiyu-wei-929163210/"
+  linkedin         : "chiyu-wei-929163210/"
   orcid            : "https://orcid.org/0009-0006-6348-7313"
   pinterest        :
   soundcloud       :
