--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Chiyu Wei"
   avatar           : "prof_pic.jpg"
-  bio              : "Prospective Ph.D. Student in Computational Social Science related fields - Fall 2024."
+  bio              : "Prospective Ph.D. Student in Computational Social Science Related Fields - Fall 2024."
   location         : "Los Angeles, CA"
   employer         :
   pubmed           : 
