update about me

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=We2CU94AAAAJ&hl=en&oi=ao"
-  email            : "chiyuwei@usc.edu"
+  email            : "chiyu.wei.gr@dartmouth.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
